<resources>
    <string name="app_name">Lyfstile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="height">Height</string>
    <string name="tell_us_about_you">Tell us about you</string>
    <string name="weight">Weight</string>
    <string name="bmi">BMI: %1$.2f </string>
    <string name="bmi_underweight"><![CDATA[Your BMI is <b><i>%1$.2f</i></b>, which is <b><font color=red> below</font></b> average.]]></string>
    <string name="bmi_normal"><![CDATA[Your BMI is <b><i>%1$.2f</i></b>, which is <b><font color=green> average</font></b>.]]></string>
    <string name="bmi_overweight"><![CDATA[Your BMI is <b><i>%1$.2f</i></b>, which is <b><font color=red> above</font></b> average.]]></string>
    <string name="bmi_obese"><![CDATA[Your BMI is <b><i>%1$.2f</i></b>, which is <b><font color=red> much-above</font></b> average.]]></string>
    <string name="not_provided"><![CDATA[Your BMI was not provided.]]></string>


    <!--Health stuffs-->

    <string name="current_goal">GOAL:\n %1$s</string>
    <string name="calorie_goal">Calorie Goal:\n %1$.2f kCal/day</string>
    <string name="activity_goal">Activity Goal:\n Exercise %1$s/day</string>
    <string name="goal_option">%1$s : %2$d pounds/week</string>
    <string name="lose_weight">Lose Weight</string>
    <string name="maintain_weight">Maintain Weight</string>
    <string name="gain_weight">Gain Weight</string>
    <string name="warning_losing"><![CDATA[<font color=red>Losing %2$d lbs a week is a lot,\n please consult your physician</font>]]></string>
    <string name="warning_gaining"><![CDATA[<font color=red>Gaining %2$d lbs a week is a lot,\n please consult your physician</font>]]></string>
    <string name="title_activity_main_nav">MainActivityNav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


</resources>