<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/dialog_background"
>

    <TextView
        android:id="@+id/goal_header"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/rounded_corner_text"
        android:fontFamily="@font/shippori"
        android:gravity="center"
        android:text="Choose Goal:"
        android:textAlignment="center"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/activity_level_header"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="34dp"
        android:layout_marginTop="165dp"
        android:layout_marginEnd="31dp"
        android:background="@drawable/rounded_corner_text"
        android:fontFamily="@font/shippori"
        android:gravity="center"
        android:text="Choose Activity Level\n (1: not active - 5: extremely active)"
        android:textAlignment="center"
        android:textSize="17dp" />

    <RadioGroup
        android:id="@+id/radio_group_goal"
        android:layout_width="374dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="114dp"
        android:layout_marginEnd="18dp"
        android:background="@drawable/rounded_corner_text"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_lw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/shippori"
            android:onClick="onRadioButtonClicked"
            android:text="@string/lose_weight"
            android:textSize="10dp" />

        <RadioButton
            android:id="@+id/radio_mw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/shippori"
            android:onClick="onRadioButtonClicked"
            android:text="@string/maintain_weight"
            android:textSize="10dp" />

        <RadioButton
            android:id="@+id/radio_gw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/shippori"
            android:onClick="onRadioButtonClicked"
            android:text="@string/gain_weight"
            android:textSize="10dp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radio_group_activity"
        android:layout_width="313dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="51dp"
        android:layout_marginTop="257dp"
        android:layout_marginEnd="49dp"
        android:background="@drawable/rounded_corner_text"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_not_active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="1" />

        <RadioButton
            android:id="@+id/radio_mildly_active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="2" />

        <RadioButton
            android:id="@+id/radio_active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="3" />

        <RadioButton
            android:id="@+id/radio_very_active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="4" />

        <RadioButton
            android:id="@+id/radio_extremely_active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="5" />
    </RadioGroup>

    <TextView
        android:id="@+id/goalText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="57dp"
        android:layout_marginTop="301dp"
        android:layout_marginEnd="54dp"
        android:background="@drawable/rounded_corner_text"
        android:text="@string/goal_option"
        android:textAlignment="center"
        android:textSize="20dp" />

    <NumberPicker
        android:id="@+id/number_picker_1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="107dp"
        android:layout_marginTop="366dp"
        android:layout_marginEnd="102dp"
        android:background="@drawable/rounded_corner_text"></NumberPicker>

    <Button
        android:id="@+id/ok"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="557dp"
        android:layout_marginEnd="55dp"
        android:text="Ok"></Button>

    <Button
        android:id="@+id/cancel"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="66dp"
        android:layout_marginTop="557dp"
        android:text="Cancel"></Button>


</RelativeLayout>